# spatial-alignment

./: .gitignore  README.md  constraints.txt  gpsa_release.sh  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: docs.yml  main.yml  upgrade-requirements.yml
examples/: grid_example.py
gpsa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_variational_gpsa_forward.py
