[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpsa"
version = "0.6.8"
description = "Gaussian Process Spatial Alignment (GPSA)"
license = { text = "Apache-2.0" }
authors = [{ name = "Andy Jones", email = "ajones788@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.12"